# APS

./: .gitignore  README.md  build.gradle  local.properties  settings.gradle
Deeplearning/: README.md  export_inference_graph.py  object_detection_run.py  pack_metadata.py  run_tflite.py  ssd_mobilenet_v1_pets.config  ssd_mobilenet_v2_pets.config  train.py
app/: build.gradle
app/src/androidTest/java/com/example/aps/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/samples/05_InstantTracking_3_Interactivity/: index.html  index_cat.html
app/src/main/assets/samples/05_InstantTracking_3_Interactivity/assets/models/cat/: dice.wt3  fence.wt3  pillow.wt3
app/src/main/assets/samples/05_InstantTracking_3_Interactivity/assets/models/dog/: ball.wt3  cap.wt3
app/src/main/assets/samples/05_InstantTracking_3_Interactivity/js/: 3dmodelsandgesturesinstanttracking_cat.js
app/src/main/java/com/detect/petsar/: CameraActivity.java  CameraConnectionFragment.java  DetectorActivity.java  LegacyCameraConnectionFragment.java  ListActivity.java  PetArActivity.java  ProductActivity.java  ProductAdapter.java  ProductItem.java  Real_MainActivity.java
app/src/main/java/com/detect/petsar/customview/: AutoFitTextureView.java  OverlayView.java  RecognitionScoreView.java  ResultsView.java
app/src/main/java/com/detect/petsar/env/: BorderedText.java  ImageUtils.java  Logger.java  Size.java
app/src/main/java/com/detect/petsar/tracking/: MultiBoxTracker.java
app/src/main/java/com/example/aps/: MainActivity.java
app/src/main/res/drawable/: selector_ar.xml  selector_list.xml  selector_type.xml
app/src/main/res/layout/: activity_list.xml  activity_pet_ar.xml  activity_product.xml  activity_real__main.xml  list_item.xml  tfe_od_activity_camera.xml  tfe_od_camera_connection_fragment_tracking.xml  tfe_od_layout_bottom_sheet.xml
app/src/main/res/mipmap-anydpi-v26/: ic_launcher.xml  ic_launcher_petsar.xml
app/src/main/res/values/: colors.xml  ic_launcher_petsar_background.xml  strings.xml  styles.xml  themes.xml  wikitude_license_key.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/aps/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
plugins/: build.gradle
plugins/src/main/cpp/: CMakeLists.txt
plugins/src/main/cpp/src/barcode/: BarcodeScanner.hpp
plugins/src/main/cpp/src/custom_camera/: OpenGLESScanningEffectRenderingPluginModule.hpp
plugins/src/main/cpp/src/face_detection/Renderables/: StrokedRectangle.cpp  StrokedRectangle.hpp
plugins/src/main/cpp/src/marker_tracking/: MarkerTracker.cpp  MarkerTracker.hpp  MarkerTrackerJavaScriptPluginModule.hpp  MarkerTrackerPlugin.hpp
